--- a/Joseph Pellegrino.html
+++ b/Joseph Pellegrino.html
@@ -149,6 +149,26 @@
 			background-image: -ms-linear-gradient(left, #222222, #f0f0f0, #222222);
 			background-image: -o-linear-gradient(left, #222222, #f0f0f0, #222222);
 		}
+		
+		#site {
+			color: #d4af36;
+		}
+		
+		#site:link {
+			color: #d4af36;
+		}
+		
+		#site:visited {
+			color: #ddd;
+		}
+
+		#site:hover {
+			color: #d8d8d8;
+		}
+
+		#site:active {
+			color: #fff;
+		}
 	</style>
 </head>
 
@@ -190,7 +210,9 @@ My final passion is for starting projects. I enjoy taking on a task and seeing
 it through to the end, which comes in handy when designing software.
 				</pre>
 			</div>
-		</div>
+		</div>	
+	<br>
+	For more information about me, here's my <a id="site" href="https://www.linkedin.com/in/joseph-pellegrino-441263b5">LinkedIn</a>.
 	</section>
 </body>
 </html>
