--- a/PSS.html
+++ b/PSS.html
@@ -155,7 +155,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="Joseph Pellegrino.html">About me</a></li>
+				<li><a href="index.html">About me</a></li>
 				<li><a href="Resume.html">Resume</a></li>
 				<li id="selected"><a href="PSS.html">PSS</a></li>
 				<li><a href="Contact.html">Contact</a></li>
