--- a/Contact.html
+++ b/Contact.html
@@ -140,7 +140,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="Joseph Pellegrino.html">About me</a></li>
+				<li><a href="index.html">About me</a></li>
 				<li><a href="Resume.html">Resume</a></li>
 				<li><a href="PSS.html">PSS</a></li>
 				<li id="selected"><a href="Contact.html">Contact</a></li>
