--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li id="selected"><a href="Joseph Pellegrino.html">About me</a></li>
+				<li id="selected"><a href="index.html">About me</a></li>
 				<li><a href="Resume.html">Resume</a></li>
 				<li><a href="PSS.html">PSS</a></li>
 				<li><a href="Contact.html">Contact</a></li>
