enlarged linkedin leak

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ it through to the end, which comes in handy when designing software.
 			</div>
 		</div>	
 	<br>
-	For more information about me, here's my <a id="site" href="https://www.linkedin.com/in/joseph-pellegrino-441263b5">LinkedIn</a>.
+	<h3>For more information about me, here's my <a id="site" href="https://www.linkedin.com/in/joseph-pellegrino-441263b5">LinkedIn</a>.</h3>
 	</section>
 </body>
 </html>
